@@ -35,6 +35,7 @@ Zhimin Huang <zhimin.huang@bqvision.com>
 Jan Seeger <jan.seeger@thenybble.de>
 Will Bryant <will.bryant@gmail.com>
 LRN <lrn1986@gmail.com>
+Sven Geggus <sts@fuchsschwanzdomain.de>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
